# drip_orch_platform

./: README.md  app.py  main.py  nse_scraper.py  pyproject.toml  rapid_stock_quote.py  requirements.txt
core/: security.py
db/: models.py
scraper/: drip.py  groq_client.py  mystocks.py
